syntax = "proto3";

package com.challenge.solution2.proto;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message LWWElementSet {
    TimestampGSet addSet = 1;
    TimestampGSet removeSet = 2;
}

message TimestampGSet {
    message Entry {
        google.protobuf.Any element = 1;
        google.protobuf.Timestamp timestamp = 2;
    }
    repeated Entry entries = 1;
}


